# rustdb

./: .gitignore  LICENSE  QUERY_DSL_ROADMAP.md  README.md
.github/workflows/: rust.yml
database/: Cargo.toml  database_ui.db  demo_database.db  test_storage_18168_1758148246615187600_2.db
database/benches/: bson_benchmarks.rs
database/docs/: bson_format.md  buffer_pool.md  storage_engine_implementation.md
database/examples/: bson_serialization.rs  debug_corruption.rs  debug_detailed.rs  debug_math.rs  debug_slot_reuse.rs  logging_demo.rs
database/proptest-regressions/document/: types.txt
database/src/: error.rs  lib.rs  main.rs  result.rs
database/src/document/: bson.rs  document.rs  mod.rs  object_id.rs  types.rs  validator.rs
database/src/storage/: VACUUM_TASK.md  buffer_pool.rs  file.rs  mod.rs  page.rs  page_layout.rs  storage_engine.rs
database/src/ui/: app.rs  mod.rs
database/tests/: README.md  bson_roundtrip_tests.rs  buffer_pool_integration.rs  compaction_bug_test.rs  crud_operations_test.rs  debug_file_locks.rs  id_persistence_test.rs  page_layout_advanced_qa.rs  page_layout_fuzz.rs  page_layout_integration.rs  storage_engine_extended_test.rs  storage_engine_roundtrip_test.rs.disabled  storage_engine_test.rs  week1_integration.rs  week2_integration.rs
database/tests/debug/: debug_compaction.rs  mod.rs
database/tests/integration/: mod.rs  storage_engine_extended_test.rs  vacuum_test.rs  week2_integration.rs
database/tests/property/: document_iteration_test.rs  mod.rs  page_layout_qa.rs
database/tests/unit/: mod.rs  simple_page_test.rs
