[package]
name = "database"
version = "0.1.0"
edition = "2024"

# [workspace]
# members = ["storage", "document", "collection", "index", "query", "server"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"
proptest = "1.6.0"
tempfile = "3.20.0"
rand = "0.9.1"
hex = "0.4.3"
byteorder = "1.4"
crc32fast = "1.4.0"
bincode = "1.3.3"
fs2 = "0.4.3"
egui = "0.27"
eframe = "0.27"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bson_benchmarks"
harness = false

# Test organization
[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[[test]]
name = "property_tests"
path = "tests/property/mod.rs"

[[test]]
name = "debug_tests"
path = "tests/debug/mod.rs"
